<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D6D6"
    tools:context=".activities.LeadersActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TableLayout
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/round_shape"
            android:backgroundTint="#fff"
            android:elevation="3dp"
            android:translationZ="3dp">

            <TableRow>
                <TextView
                    android:text="@string/score"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:fontFamily="@font/aldrichrusbydaymarius"
                    android:textStyle="bold"/>
                <TextView
                    android:text="@string/comand_name"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:fontFamily="@font/aldrichrusbydaymarius"
                    android:textStyle="bold"/>
                <TextView
                    android:text="@string/wins"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:fontFamily="@font/aldrichrusbydaymarius"
                    android:textStyle="bold"/>
                <TextView
                    android:text="@string/loses"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:fontFamily="@font/aldrichrusbydaymarius"
                    android:textStyle="bold"/>
                <TextView
                    android:text="@string/draws"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:fontFamily="@font/aldrichrusbydaymarius"
                    android:textStyle="bold"/>
            </TableRow>


        </TableLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_shape"
        android:elevation="3dp"
        android:fontFamily="@font/aldrichrusbydaymarius"
        android:text="@string/back"
        android:textSize="25sp"
        android:translationZ="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>